<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_health_care"
            android:icon="@drawable/ic_menu_hospital"
            android:title="@string/menu_my_health_care_group" />

        <item
            android:id="@+id/nav_children"
            android:icon="@drawable/ic_menu_child_care"
            android:title="@string/menu_children" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/menu_settings" />
    </group>
</menu>